--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -5,8 +5,11 @@
 
 .planExecutionArea {
     width: 850px;
+    font-family: monospace;
+    font-size: large;
 }
 
 .lineExampleLabel {
-    font-style: italic;
+    font-family: monospace;
+    font-size: large;
 }
