Add capture of coordinates

--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -12,3 +12,8 @@
     font-family: monospace;
     font-size: large;
 }
+
+.mouseCoordsCaptured {
+    font-family: monospace;
+    font-size: large;
+}
