--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -1,9 +1,9 @@
 .page {
-    width: 1000px !important;
+    width: 1100px !important;
 }
 
 .planExecutionArea {
-    width: 950px;
+    width: 1100px;
     font-family: monospace;
     font-size: large;
 }
@@ -11,6 +11,7 @@
 .lineExampleLabel {
     font-family: monospace;
     font-size: large;
+    font-weight: bold;
 }
 
 .mouseCoordsCaptured {
